// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfigureTwoFactor /> should render <ConfigureTwoFactor /> without errors 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfigureTwoFactor
    disableTwoFactor={[Function]}
    getTwoFactorStatus={[Function]}
    location={
      Object {
        "search": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <p>
          Loading two-factor configuration status...
        </p>,
      ],
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Loading two-factor configuration status...",
        },
        "ref": null,
        "rendered": "Loading two-factor configuration status...",
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <p>
            Loading two-factor configuration status...
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Loading two-factor configuration status...",
          },
          "ref": null,
          "rendered": "Loading two-factor configuration status...",
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ConfigureTwoFactor /> should render after loading the twoFactorStatus and it is disabled 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfigureTwoFactor
    disableTwoFactor={[Function]}
    getTwoFactorStatus={[Function]}
    location={
      Object {
        "search": "",
      }
    }
    twoFactorStatus={
      Object {
        "twofactor": null,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <h2>
              Security
            </h2>
          </div>
        </div>,
        null,
        <div>
          <p>
            There are two ways to configure two factor authentication 
          </p>
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                SMS text message
              </h5>
              <p
                className="card-text"
              >
                Receive a text message to your mobile device
              </p>
              <Link
                replace={false}
                to="/account/settings/2fa/sms"
              >
                <button
                  className="btn btn-primary"
                >
                  Configure phone
                </button>
              </Link>
            </div>
          </div>
          <br />
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Use an app
              </h5>
              <p
                className="card-text"
              >
                Scan a QR code with Google Authentication or similar apps
              </p>
              <Link
                replace={false}
                to="/account/settings/2fa/app"
              >
                <button
                  className="btn btn-primary"
                >
                  Configure app
                </button>
              </Link>
            </div>
          </div>
        </div>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-12"
          >
            <h2>
              Security
            </h2>
          </div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2>
              Security
            </h2>,
            "className": "col-12",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Security",
            },
            "ref": null,
            "rendered": "Security",
            "type": "h2",
          },
          "type": "div",
        },
        "type": "div",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              There are two ways to configure two factor authentication 
            </p>,
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  SMS text message
                </h5>
                <p
                  className="card-text"
                >
                  Receive a text message to your mobile device
                </p>
                <Link
                  replace={false}
                  to="/account/settings/2fa/sms"
                >
                  <button
                    className="btn btn-primary"
                  >
                    Configure phone
                  </button>
                </Link>
              </div>
            </div>,
            <br />,
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  Use an app
                </h5>
                <p
                  className="card-text"
                >
                  Scan a QR code with Google Authentication or similar apps
                </p>
                <Link
                  replace={false}
                  to="/account/settings/2fa/app"
                >
                  <button
                    className="btn btn-primary"
                  >
                    Configure app
                  </button>
                </Link>
              </div>
            </div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "There are two ways to configure two factor authentication ",
            },
            "ref": null,
            "rendered": "There are two ways to configure two factor authentication ",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  SMS text message
                </h5>
                <p
                  className="card-text"
                >
                  Receive a text message to your mobile device
                </p>
                <Link
                  replace={false}
                  to="/account/settings/2fa/sms"
                >
                  <button
                    className="btn btn-primary"
                  >
                    Configure phone
                  </button>
                </Link>
              </div>,
              "className": "card",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="card-title"
                  >
                    SMS text message
                  </h5>,
                  <p
                    className="card-text"
                  >
                    Receive a text message to your mobile device
                  </p>,
                  <Link
                    replace={false}
                    to="/account/settings/2fa/sms"
                  >
                    <button
                      className="btn btn-primary"
                    >
                      Configure phone
                    </button>
                  </Link>,
                ],
                "className": "card-body",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SMS text message",
                    "className": "card-title",
                  },
                  "ref": null,
                  "rendered": "SMS text message",
                  "type": "h5",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Receive a text message to your mobile device",
                    "className": "card-text",
                  },
                  "ref": null,
                  "rendered": "Receive a text message to your mobile device",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <button
                      className="btn btn-primary"
                    >
                      Configure phone
                    </button>,
                    "replace": false,
                    "to": "/account/settings/2fa/sms",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Configure phone",
                      "className": "btn btn-primary",
                    },
                    "ref": null,
                    "rendered": "Configure phone",
                    "type": "button",
                  },
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  Use an app
                </h5>
                <p
                  className="card-text"
                >
                  Scan a QR code with Google Authentication or similar apps
                </p>
                <Link
                  replace={false}
                  to="/account/settings/2fa/app"
                >
                  <button
                    className="btn btn-primary"
                  >
                    Configure app
                  </button>
                </Link>
              </div>,
              "className": "card",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="card-title"
                  >
                    Use an app
                  </h5>,
                  <p
                    className="card-text"
                  >
                    Scan a QR code with Google Authentication or similar apps
                  </p>,
                  <Link
                    replace={false}
                    to="/account/settings/2fa/app"
                  >
                    <button
                      className="btn btn-primary"
                    >
                      Configure app
                    </button>
                  </Link>,
                ],
                "className": "card-body",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Use an app",
                    "className": "card-title",
                  },
                  "ref": null,
                  "rendered": "Use an app",
                  "type": "h5",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Scan a QR code with Google Authentication or similar apps",
                    "className": "card-text",
                  },
                  "ref": null,
                  "rendered": "Scan a QR code with Google Authentication or similar apps",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <button
                      className="btn btn-primary"
                    >
                      Configure app
                    </button>,
                    "replace": false,
                    "to": "/account/settings/2fa/app",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Configure app",
                      "className": "btn btn-primary",
                    },
                    "ref": null,
                    "rendered": "Configure app",
                    "type": "button",
                  },
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row"
          >
            <div
              className="col-12"
            >
              <h2>
                Security
              </h2>
            </div>
          </div>,
          null,
          <div>
            <p>
              There are two ways to configure two factor authentication 
            </p>
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  SMS text message
                </h5>
                <p
                  className="card-text"
                >
                  Receive a text message to your mobile device
                </p>
                <Link
                  replace={false}
                  to="/account/settings/2fa/sms"
                >
                  <button
                    className="btn btn-primary"
                  >
                    Configure phone
                  </button>
                </Link>
              </div>
            </div>
            <br />
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  Use an app
                </h5>
                <p
                  className="card-text"
                >
                  Scan a QR code with Google Authentication or similar apps
                </p>
                <Link
                  replace={false}
                  to="/account/settings/2fa/app"
                >
                  <button
                    className="btn btn-primary"
                  >
                    Configure app
                  </button>
                </Link>
              </div>
            </div>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-12"
            >
              <h2>
                Security
              </h2>
            </div>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h2>
                Security
              </h2>,
              "className": "col-12",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Security",
              },
              "ref": null,
              "rendered": "Security",
              "type": "h2",
            },
            "type": "div",
          },
          "type": "div",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                There are two ways to configure two factor authentication 
              </p>,
              <div
                className="card"
              >
                <div
                  className="card-body"
                >
                  <h5
                    className="card-title"
                  >
                    SMS text message
                  </h5>
                  <p
                    className="card-text"
                  >
                    Receive a text message to your mobile device
                  </p>
                  <Link
                    replace={false}
                    to="/account/settings/2fa/sms"
                  >
                    <button
                      className="btn btn-primary"
                    >
                      Configure phone
                    </button>
                  </Link>
                </div>
              </div>,
              <br />,
              <div
                className="card"
              >
                <div
                  className="card-body"
                >
                  <h5
                    className="card-title"
                  >
                    Use an app
                  </h5>
                  <p
                    className="card-text"
                  >
                    Scan a QR code with Google Authentication or similar apps
                  </p>
                  <Link
                    replace={false}
                    to="/account/settings/2fa/app"
                  >
                    <button
                      className="btn btn-primary"
                    >
                      Configure app
                    </button>
                  </Link>
                </div>
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "There are two ways to configure two factor authentication ",
              },
              "ref": null,
              "rendered": "There are two ways to configure two factor authentication ",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-body"
                >
                  <h5
                    className="card-title"
                  >
                    SMS text message
                  </h5>
                  <p
                    className="card-text"
                  >
                    Receive a text message to your mobile device
                  </p>
                  <Link
                    replace={false}
                    to="/account/settings/2fa/sms"
                  >
                    <button
                      className="btn btn-primary"
                    >
                      Configure phone
                    </button>
                  </Link>
                </div>,
                "className": "card",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h5
                      className="card-title"
                    >
                      SMS text message
                    </h5>,
                    <p
                      className="card-text"
                    >
                      Receive a text message to your mobile device
                    </p>,
                    <Link
                      replace={false}
                      to="/account/settings/2fa/sms"
                    >
                      <button
                        className="btn btn-primary"
                      >
                        Configure phone
                      </button>
                    </Link>,
                  ],
                  "className": "card-body",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "SMS text message",
                      "className": "card-title",
                    },
                    "ref": null,
                    "rendered": "SMS text message",
                    "type": "h5",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Receive a text message to your mobile device",
                      "className": "card-text",
                    },
                    "ref": null,
                    "rendered": "Receive a text message to your mobile device",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <button
                        className="btn btn-primary"
                      >
                        Configure phone
                      </button>,
                      "replace": false,
                      "to": "/account/settings/2fa/sms",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Configure phone",
                        "className": "btn btn-primary",
                      },
                      "ref": null,
                      "rendered": "Configure phone",
                      "type": "button",
                    },
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-body"
                >
                  <h5
                    className="card-title"
                  >
                    Use an app
                  </h5>
                  <p
                    className="card-text"
                  >
                    Scan a QR code with Google Authentication or similar apps
                  </p>
                  <Link
                    replace={false}
                    to="/account/settings/2fa/app"
                  >
                    <button
                      className="btn btn-primary"
                    >
                      Configure app
                    </button>
                  </Link>
                </div>,
                "className": "card",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h5
                      className="card-title"
                    >
                      Use an app
                    </h5>,
                    <p
                      className="card-text"
                    >
                      Scan a QR code with Google Authentication or similar apps
                    </p>,
                    <Link
                      replace={false}
                      to="/account/settings/2fa/app"
                    >
                      <button
                        className="btn btn-primary"
                      >
                        Configure app
                      </button>
                    </Link>,
                  ],
                  "className": "card-body",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Use an app",
                      "className": "card-title",
                    },
                    "ref": null,
                    "rendered": "Use an app",
                    "type": "h5",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Scan a QR code with Google Authentication or similar apps",
                      "className": "card-text",
                    },
                    "ref": null,
                    "rendered": "Scan a QR code with Google Authentication or similar apps",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <button
                        className="btn btn-primary"
                      >
                        Configure app
                      </button>,
                      "replace": false,
                      "to": "/account/settings/2fa/app",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Configure app",
                        "className": "btn btn-primary",
                      },
                      "ref": null,
                      "rendered": "Configure app",
                      "type": "button",
                    },
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ConfigureTwoFactor /> should render after loading the twoFactorStatus and it is enabled 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfigureTwoFactor
    disableTwoFactor={[Function]}
    getTwoFactorStatus={[Function]}
    location={
      Object {
        "search": "",
      }
    }
    twoFactorStatus={
      Object {
        "twofactor": "qr",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <h2>
              Security
            </h2>
          </div>
        </div>,
        <div
          className="card"
        >
          <div
            className="card-body"
          >
            <p
              className="card-text"
            >
              You have two factor authentication enabled 
              using an app
            </p>
            <p
              className="card-text"
            >
              <button
                className="btn btn-secondary"
                onClick={[Function]}
              >
                Edit
              </button>
            </p>
          </div>
        </div>,
        false,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-12"
          >
            <h2>
              Security
            </h2>
          </div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2>
              Security
            </h2>,
            "className": "col-12",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Security",
            },
            "ref": null,
            "rendered": "Security",
            "type": "h2",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="card-body"
          >
            <p
              className="card-text"
            >
              You have two factor authentication enabled 
              using an app
            </p>
            <p
              className="card-text"
            >
              <button
                className="btn btn-secondary"
                onClick={[Function]}
              >
                Edit
              </button>
            </p>
          </div>,
          "className": "card",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <p
                className="card-text"
              >
                You have two factor authentication enabled 
                using an app
              </p>,
              <p
                className="card-text"
              >
                <button
                  className="btn btn-secondary"
                  onClick={[Function]}
                >
                  Edit
                </button>
              </p>,
            ],
            "className": "card-body",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "You have two factor authentication enabled ",
                  "using an app",
                ],
                "className": "card-text",
              },
              "ref": null,
              "rendered": Array [
                "You have two factor authentication enabled ",
                "using an app",
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="btn btn-secondary"
                  onClick={[Function]}
                >
                  Edit
                </button>,
                "className": "card-text",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit",
                  "className": "btn btn-secondary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Edit",
                "type": "button",
              },
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row"
          >
            <div
              className="col-12"
            >
              <h2>
                Security
              </h2>
            </div>
          </div>,
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <p
                className="card-text"
              >
                You have two factor authentication enabled 
                using an app
              </p>
              <p
                className="card-text"
              >
                <button
                  className="btn btn-secondary"
                  onClick={[Function]}
                >
                  Edit
                </button>
              </p>
            </div>
          </div>,
          false,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-12"
            >
              <h2>
                Security
              </h2>
            </div>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h2>
                Security
              </h2>,
              "className": "col-12",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Security",
              },
              "ref": null,
              "rendered": "Security",
              "type": "h2",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card-body"
            >
              <p
                className="card-text"
              >
                You have two factor authentication enabled 
                using an app
              </p>
              <p
                className="card-text"
              >
                <button
                  className="btn btn-secondary"
                  onClick={[Function]}
                >
                  Edit
                </button>
              </p>
            </div>,
            "className": "card",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <p
                  className="card-text"
                >
                  You have two factor authentication enabled 
                  using an app
                </p>,
                <p
                  className="card-text"
                >
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                  >
                    Edit
                  </button>
                </p>,
              ],
              "className": "card-body",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "You have two factor authentication enabled ",
                    "using an app",
                  ],
                  "className": "card-text",
                },
                "ref": null,
                "rendered": Array [
                  "You have two factor authentication enabled ",
                  "using an app",
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                  >
                    Edit
                  </button>,
                  "className": "card-text",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Edit",
                    "className": "btn btn-secondary",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Edit",
                  "type": "button",
                },
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ConfigureTwoFactor /> should render the disabled message 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfigureTwoFactor
    disableTwoFactor={[Function]}
    getTwoFactorStatus={[Function]}
    location={
      Object {
        "search": "?disabled",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="card shadow-lg p-3 mb-5 bg-white rounded message-box"
      >
        <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            <i
              className="fas fa-check"
            />
          </h5>
          <p
            className="card-text"
          >
            Two factor authentication has been disabled.
          </p>
        </div>
      </div>,
      "className": "container text-center",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            <i
              className="fas fa-check"
            />
          </h5>
          <p
            className="card-text"
          >
            Two factor authentication has been disabled.
          </p>
        </div>,
        "className": "card shadow-lg p-3 mb-5 bg-white rounded message-box",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h5
              className="card-title"
            >
              <i
                className="fas fa-check"
              />
            </h5>,
            <p
              className="card-text"
            >
              Two factor authentication has been disabled.
            </p>,
          ],
          "className": "card-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                className="fas fa-check"
              />,
              "className": "card-title",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-check",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Two factor authentication has been disabled.",
              "className": "card-text",
            },
            "ref": null,
            "rendered": "Two factor authentication has been disabled.",
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="card shadow-lg p-3 mb-5 bg-white rounded message-box"
        >
          <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              <i
                className="fas fa-check"
              />
            </h5>
            <p
              className="card-text"
            >
              Two factor authentication has been disabled.
            </p>
          </div>
        </div>,
        "className": "container text-center",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              <i
                className="fas fa-check"
              />
            </h5>
            <p
              className="card-text"
            >
              Two factor authentication has been disabled.
            </p>
          </div>,
          "className": "card shadow-lg p-3 mb-5 bg-white rounded message-box",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h5
                className="card-title"
              >
                <i
                  className="fas fa-check"
                />
              </h5>,
              <p
                className="card-text"
              >
                Two factor authentication has been disabled.
              </p>,
            ],
            "className": "card-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  className="fas fa-check"
                />,
                "className": "card-title",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-check",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Two factor authentication has been disabled.",
                "className": "card-text",
              },
              "ref": null,
              "rendered": "Two factor authentication has been disabled.",
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
